Fix home picks sizing and spacing

--- a/src/app/home/home.tablet.styl
+++ b/src/app/home/home.tablet.styl
@@ -5,5 +5,9 @@
     h2 {
       font-size: 26px;
     }
+
+    .gallery > div {
+      margin-left: -40px;
+    }
   }
 }
