--- a/src/app/picks/picks.tablet.styl
+++ b/src/app/picks/picks.tablet.styl
@@ -2,8 +2,8 @@
   section.picks.gallery {
     .pick {
       flex-basis: 350px;
-      max-width: 480px;
       margin-top: 40px;
+      margin-left: 40px;
 
       &.curated { flex-basis: 100%; max-width: initial; }
 
